5.1.7 -> 5.1.8:
    - jbj: yarn: convert urlInfo refcounts to usage mutexes.
    - jbj: yarn: convert FD_t refcounts to usage mutexes.
    - jbj: zlog: backport from HEAD.
    - jbj: yarn: backport from HEAD (likely --with-pthreads needed todo++).
    - jbj: bzdio: handle multiblock compressed payloads transparently.
    - jbj: xzdio: backport the remaining xzdio contexxtual changes. worksforme.
    - jbj: xzdio: backport XZ changes from HEAD.
    - jbj: rename lzdio.c -> xzdio.c.

5.1.6 -> 5.1.7:
    - jbj: update po files (Translation Project).
    - jbj: eleminate duplicate rpmVersionCompare() routines.
    - afb: backport macosx ldflags fixes.
    - glen: markLinkedFailed if rpm file reopen failed during transaction to avoid losing old pkg info from db
    - jbj: add rpmdsNSType() to -lrpm loader map.
    - jbj: update po files (Translation Project).
    - jbj: update PO and doxygen manifests.
    - jbj: include rpmgrep.1 with "make dist".
    - rpm.org: Don't try to create "" directories.
    - rpm.org: Don't bother calculating string sizes manually.
    - rpm.org: memory used by lua gets freed (just remove comment).
    - rpm.org: repeated read config -> free config needs globalLuaState == NULL.
    - rpm.org: Fix buffer overflow on oversized filelist entries(susebz#397006).
    - jbj: pcre: finalize --with-pcre=internal building.
    - jbj: pcre: punish PLD with internal bloat until the trivial AutoFu exists.
    - jbj: rpmdigest: avoid segfault on named pipes and other uglix fauna.
    - jbj: rpmbuild: use anchored patterns for data validation.
    - jbj: run "make check" to self consistency. worksforme.
    - jbj: add --whatneeds/--needswhat popt aliases.
    - jbj: backport the test harness for signature(). worksforme.
    - jbj: rpmbuild: enumerate all the lexical patterns in parsePreamble().
    - jbj: rpmbuild: enable pattern validation for simple package identifiers.
    - jbj: rpmbuild: add tag data validation pattern checks.