@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: yarn: convert Header refcounts to usage mutexes.
     - jbj: yarn: convert urlInfo refcounts to usage mutexes.
     - jbj: yarn: convert FD_t refcounts to usage mutexes.
     - jbj: zlog: backport from HEAD.
